Fixes #9218. Fall back to the Weaviate mock backend when the real API is not configured
WeaviateTestResource threw an IllegalStateException when
CAMEL_QUARKUS_START_MOCK_BACKEND=false was set without WEAVIATE_API_KEY
and WEAVIATE_HOST. It now starts the Weaviate container in that case,
like the Kubernetes tests, and logs a warning so the fallback is not
silent. The real backend is used only when the mock backend is disabled
and both variables are set; setting the variables alone no longer
selects the real backend.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>